--- a/yolo_infer_ufo.ipynb
+++ b/yolo_infer_ufo.ipynb
@@ -22,8 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install ultralytics\n",
-        "!pip install -U ipywidgets"
+        "!pip install ultralytics\n"
       ]
     },
     {
