--- a/yolo_WBF.ipynb
+++ b/yolo_WBF.ipynb
@@ -30,8 +30,8 @@
     {
       "cell_type": "code",
       "source": [
-        "wrights_path = '가중치들이 저장된 폴더 경로'\n",
-        "models = [YOLO(pt) for pt in glob(os.path.join(wrights_path,'*'))]"
+        "weights_path = '가중치들이 저장된 폴더 경로'\n",
+        "models = [YOLO(pt) for pt in glob(os.path.join(weights_path,'*'))]"
       ],
       "metadata": {
         "id": "6T_DGCyD9icV"
