--- a/yolo_WBF_ufo.ipynb
+++ b/yolo_WBF_ufo.ipynb
@@ -84,7 +84,7 @@
         "\n",
         "    iou_thr = 0.5  # IoU threshold\n",
         "    skip_box_thr = 0.5  # Confidence threshold\n",
-        "    weights = [1, 1, 1]  # 모델들의 가중치\n",
+        "    weights = [1]*len(weights_path) # 모델들의 가중치\n",
         "\n",
         "    fused_boxes, fused_scores, fused_labels = weighted_boxes_fusion(\n",
         "        boxes_list, scores_list, labels_list, iou_thr=iou_thr, skip_box_thr=skip_box_thr, weights=weights\n",
